<?xml version="1.0"?>
<package format="2">
	<name>turtlebot</name>
	<version>0.0.0</version>
	<description>Scripts and parameters for the 4DAGE-TurtleBot.</description>

	<maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
</package>
